--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,46 @@
 # Omakase Ruby styling for Rails
 inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
-# Overwrite or add rules to create your own house style
-#
-# # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
-# Layout/SpaceInsideArrayLiteralBrackets:
-#   Enabled: false
+plugins:
+  - rubocop-rails
+  - rubocop-performance
+  - rubocop-rspec
+  - rubocop-capybara
+  - rubocop-factory_bot
+
+AllCops:
+  SuggestExtensions: false
+  NewCops: enable
+
+# パフォーマンスルールはテスト配下のファイルを無視するように設定
+Performance:
+  Exclude:
+    - "**/test/**/*"
+
+# 1行の最長の文字数を設定
+Layout/LineLength:
+  Max: 160
+
+# クラス、モジュール前のドキュメント無しを許可
+Style/Documentation:
+  Enabled: false
+
+# ASCII以外の文字コメントを許可
+Style/AsciiComments:
+  Enabled: false
+
+# 文字列リテラルのデフォルトをシングルクォートに設定
+Style/StringLiterals:
+  Enabled: true
+  EnforcedStyle: single_quotes
+
+# メソッドの長さにコメントを含めず、最長行数を設定
+Metrics/MethodLength:
+  CountComments: false
+  Max: 25
+  Exclude:
+    - test/**/*
+
+# 未使用メソッドの自動修正を無効化
+Lint/UnusedMethodArgument:
+  AutoCorrect: false
